fixed popout menus clipping through nav bar (mobile)

--- a/client/src/components/Styles/general.css
+++ b/client/src/components/Styles/general.css
@@ -685,7 +685,7 @@ Sidebar Nav style rules
     position: fixed;
     bottom: 10px;
     background-color: var(--header-color);
-    z-index: 1;
+    z-index: 4;
     /*box-shadow: rgba(0, 0, 0, 0.25) 0px 8px 16px;*/
   }
 
